rest/rest-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: ssciis-rest
spec:
  selector:
      matchLabels:
        app: sciis-rest
  replicas: 1
  template:
    metadata:
      labels:
        app: sciis-rest
    spec:
      containers:
      - name: sciis-rest
        image: viprabha/sciis-rest:latest
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
        ports:
        - containerPort: 5000
---
