rest/rest-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: sciis-rest
spec:
  #type: NodePort
  selector:
    app: sciis-rest
  ports:
    - protocol: "TCP"
      port: 5000
      targetPort: 5000
